# ftl-translator

./: .gitignore  README.md  pyproject.toml
examples/: ftl_translate.py  google.py  gpt.py
examples/locales/en/: common.ftl
examples/locales/ru/: common.ftl
examples/locales/zh-CN/: common.ftl
ftl_translator/: __init__.py  extractor.py  options.py  translate.py  translator.py
ftl_translator/ai/: batch_job.py  translate.py  translator.py
ftl_translator/google/: __init__.py  translate.py  translator.py
