[tool.poetry]
name = "ftl-translator"
version = "0.1.0"
description = ""
authors = ["taimast <charlskenno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fluent-compiler = ">=0.3"
deep-translator = "^1.11.4"
fluent-runtime = ">=0.3"
aiohttp = { extras = ["speedups"], version = ">=3.9" }
aiofiles = ">=20.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
